<resources>
    <string name="app_name" translatable="false">NOMADe App</string>
    <string name="api_url" translatable="false">https://nomade.clouddb.myriade.be/api/</string>
    <string name="available_questionnaires">Available questionnaires</string>
    <string name="fill_in_questionnaire">Fill in a questionnaire</string>
    <string name="view_submitted_questionnaires">View submitted questionnaires</string>
    <string name="submitted_questionnaires">Submitted questionnaires</string>
    <string name="submitted_questionnaire">Submitted questionnaire</string>
    <string name="edit_setup">Edit the setup</string>
    <string name="connected_users">Connected users</string>
    <string name="measurement_menu">Measurement menu</string>
    <string name="measurement_list">Measurement list</string>
    <string name="new_measurement">New Measurement</string>
    <string name="usb_communication">USB Communication</string>
    <string name="obstacle_alerting_system" translatable="false">Obstacle Alerting System</string>
    <string name="graphs">Graphs</string>
    <string name="configure_graphs">Configure graphs</string>
    <string name="configure_variable">Configure variable</string>
    <string name="values">Values</string>
    <string name="tcp_communication">TCP Communication</string>
    <string name="usb_and_tcp_communication">USB and TCP Communication</string>
    <string name="developer_console">Developer console</string>
    <string name="alarm_distance_simulation">Alarm Distance Simulation</string>
    <string name="control_panel">Control Panel</string>
    <string name="setup_menu">Setup menu</string>
    <string name="view_setup_list">View the setup list</string>
    <string name="setup_list">Setup list</string>
    <string name="setups">Setups</string>
    <string name="setup">Setup</string>
    <string name="setup_info">Setup Information</string>
    <string name="view_instrument_list">View the instrument list</string>
    <string name="instrument_list">Instrument list</string>
    <string name="instrumentArrayList">Instruments</string>
    <string name="instruments_colon">"Instruments: "</string>
    <string name="instrument">Instrument</string>
    <string name="new_setup">New setup</string>
    <string name="cant_add_instrument_without_setup_id">Can\'t add an instrument to a new setup without ID</string>
    <string name="choose_instrument_type">Choose an instrument type</string>
    <string name="set_parameters">Set parameters</string>
    <string name="id_colon">"ID: "</string>
    <string name="setup_id_colon">"Setup ID: "</string>
    <string name="address_colon">"Address: "</string>
    <string name="name_colon">"Name: "</string>
    <string name="parameters_colon">"Parameters: "</string>
    <string name="no_parameters">No parameters for this type of instrument</string>
    <string name="type">Type</string>
    <string name="parameter">Parameter</string>
    <string name="back">Back</string>
    <string name="add_instrument">Add instrument</string>
    <string name="description_colon">"Description: "</string>
    <string name="locked_colon">"Locked: "</string>
    <string name="level_colon" translatable="false">"Level: "</string>
    <string name="data_type_colon" translatable="false">"Data type: "</string>
    <string name="main_board_colon" translatable="false">"Main board: "</string>
    <string name="minimum_colon">"Minimum: "</string>
    <string name="maximum_colon">"Maximum: "</string>
    <string name="default_value_colon">"Default: "</string>
    <string name="value_colon">"Value: "</string>
    <string name="value_description_colon">"Value description: "</string>
    <string name="hardware_identifier_colon">"Hardware ID: "</string>
    <string name="company_id_colon">"Company ID: "</string>
    <string name="hardware_identifier">Hardware ID</string>
    <string name="company_id">Company ID</string>
    <string name="version">Version</string>
    <string name="type_id_colon">"Type ID: "</string>
    <string name="type_name_colon">"Type name: "</string>
    <string name="category_colon">"Category: "</string>
    <string name="input_bytes_colon">"Input bytes: "</string>
    <string name="output_bytes_colon">"Output bytes: "</string>
    <string name="version_colon">"Version: "</string>
    <string name="create_new_setup">Create new setup</string>
    <string name="parameter_not_supported">This parameter is not yet supported in the app!</string>
    <string name="none">None</string>
    <string name="please_provide_details">Please provide the following details</string>
    <string name="setup_in_memory_has_id_and_version">The setup in the memory of the Android device has ID %1$d and version %2$d.</string>
    <string name="no_setup_in_memory">There is no setup in the memory of the Android device</string>
    <string name="setup_in_main_board_has_id_and_version">The setup in the main board has ID %1$d and version %2$d.</string>
    <string name="no_setup_in_main_board">There is no setup in the main board.</string>
    <string name="no_instruments_available">No instruments available</string>
    <string name="no_setups_available">No setups available</string>
    <string name="distance_colon">Distance: %d cm</string>
    <string name="speed_colon">Speed: %d km/h</string>
    <string name="slope_start_colon">Slope start: %d cm</string>
    <string name="slope_percentage_colon">Slope percentage: %d %%</string>
    <string name="slope_end_colon">Slope end: %d cm</string>
    <string name="alarm_distance_colon">Alarm distance: %d cm</string>
    <string name="show_setup_info">Show the setup info</string>
    <string name="edit_setup_name">Edit the setup name</string>
    <string name="graphs_error">There is a problem with the setup in the memory of the device, please reboot the PWC and restart the app. If the problem persists, check the setup and resend it to the DCU when necessary.</string>
    <string name="obsolete">Obsolete</string>
    <string name="show_obsolete_setups">Show obsolete setups</string>
    <string name="hide_obsolete_setups">Hide obsolete setups</string>
    <string name="list_questionnaire_id_colon">Quest. ID: %1$d</string>
    <string name="list_group_id_colon">Group ID: %1$d</string>
    <string name="list_version_colon">Version: %1$d</string>
    <string name="list_count_colon">Count: %1$d</string>
    <string name="list_user_colon">User: %1$s</string>
    <string name="list_date_colon">Date: %1$s</string>
    <string name="list_child_details_colon">Quest. ID: %1$d Version: %2$d</string>
    <string name="list_submission_details_colon">Quest. ID: %1$d\nVersion: %2$d\n%3$s</string>
    <string name="list_submission_date_colon">"Submission date: "</string>
    <string name="list_last_edit_colon">"Last edit: "</string>
    <string name="filter">Filter</string>
    <string name="start_date_colon">"Start date: "</string>
    <string name="end_date_colon">"End date: "</string>
    <string name="country_colon">"Country: "</string>
    <string name="user_id_colon">"User ID: "</string>
    <string name="clear_filter">Clear filter</string>
    <string name="set_filter">Apply filter</string>
    <string name="dates_in_right_order">Please make sure the start date is before the end date.</string>
    <string name="bullet" translatable="false">&#8226;</string>
    <string name="loading_ellipsis">Loading&#8230;</string>
    <string name="ellipsis" translatable="false">&#8230;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create">Create</string>
    <string name="question">Question</string>
    <string name="upload_remaining_questionnaires">Upload %1$d remaining questionnaire(s)</string>
    <string name="nomade_logo" translatable="false">NOMADe Logo</string>
    <string name="menu_save_setup">Save setup</string>
    <string name="plan_new_measurement">Plan new measurement</string>
    <string name="start_new_measurement">Start new measurement</string>
    <string name="stop_current_measurement">Stop current measurement</string>
    <string name="new_setup_template">New setup from template</string>
    <string name="menu_add_instrument">Add a new instrument</string>
    <string name="menu_setup_info">Show setup info</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="accessibility_settings_title">Accessibility options</string>
    <string name="accessibility_settings_summary">Go to the accessibility options of your Android device to change font size, zoom level&#8230;</string>
    <string name="enable_logging_title">Enable logging</string>
    <string name="enable_logging_summary">When enabled, the log files will be saved in the SharedPreferences of the EDUCAT App, the log files can be exported using the option underneath</string>
    <string name="export_log_files_title">Export log files</string>
    <string name="export_log_files_summary">Export log files from the SharedPreferences to text files</string>
    <string name="clear_log_files_title">Clear log files</string>
    <string name="clear_log_files_summary">Clear the log files in the SharedPreferences</string>
    <string name="display_drafts_title">Display drafts</string>
    <string name="display_drafts_summary">Display drafts in the list of available questionnaires</string>
    <string name="submit_drafts_title">Submit drafts</string>
    <string name="submit_drafts_summary">Enables the ability to submit drafts</string>
    <string name="api_url_title" translatable="false">API URL</string>
    <string name="api_url_summary">Change the URL used by the app to connect to the database. Use the following format: \"https://…/api/\". Don\'t forget to add the custom SSL certificate to Android if you use a custom one. If you want to reset this to default, just clear the app data in the settings of your Android device.</string>
    <string name="automatic_usb_title">Automatic USB communication</string>
    <string name="automatic_usb_summary">If enabled, the app will automatically set up the USB communication when connected</string>
    <string name="only_enable_relevant_buttons_title">Only enable relevant buttons</string>
    <string name="only_enable_relevant_buttons_summary">If enabled, the app will automatically enable and disable buttons for the USB communication</string>
    <string name="hide_unchangeable_parameters_title">Hide unchangeable parameters</string>
    <string name="hide_unchangeable_parameters_summary">If enabled, the app will hide unchangeable parameters while configuring an instrument</string>
    <string name="initialise_communication">Initialise communication</string>
    <string name="config" translatable="false">Config</string>
    <string name="auto" translatable="false">Auto</string>
    <string name="ask_address" translatable="false">Ask address</string>
    <string name="miss_config" translatable="false">Miss config</string>
    <string name="exis_config" translatable="false">Exis config</string>
    <string name="send_setup">Send setup</string>
    <string name="send_json_setup" translatable="false">Send JSON Setup</string>
    <string name="start_stream">Start stream</string>
    <string name="stop_stream">Stop stream</string>
    <string name="request_json_setup" translatable="false">Request JSON Setup</string>
    <string name="start_measurement">Start measurement</string>
    <string name="stop_measurement">Stop measurement</string>
    <string name="send_measurement_list" translatable="false">Send measurement list</string>
    <string name="terms_label" translatable="false">Privacy policy</string>
</resources>