<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">

    <Preference
        android:key="accessibility_settings"
        android:title="@string/accessibility_settings_title"
        android:summary="@string/accessibility_settings_summary"
        android:layout="@layout/activity_settings"/>

    <EditTextPreference
        android:key="setting_server_api_url_laravel_https"
        android:title="@string/api_url_title"
        android:summary="@string/api_url_summary"
        android:defaultValue="@string/api_url"
        android:layout="@layout/activity_settings"/>

    <CheckBoxPreference
        android:key="setting_enable_logging"
        android:title="@string/enable_logging_title"
        android:summary="@string/enable_logging_summary"
        android:defaultValue="false"
        android:layout="@layout/activity_settings"/>

    <Preference
        android:key="export_log_files"
        android:title="@string/export_log_files_title"
        android:summary="@string/export_log_files_summary"
        android:layout="@layout/activity_settings"/>

    <Preference
        android:key="clear_log_files"
        android:title="@string/clear_log_files_title"
        android:summary="@string/clear_log_files_summary"
        android:layout="@layout/activity_settings"/>

    <CheckBoxPreference
        android:key="setting_qnr_draft_view"
        android:title="@string/display_drafts_title"
        android:summary="@string/display_drafts_summary"
        android:defaultValue="false"
        android:layout="@layout/activity_settings"/>

    <CheckBoxPreference
        android:key="setting_qnr_draft_submit"
        android:title="@string/submit_drafts_title"
        android:summary="@string/submit_drafts_summary"
        android:defaultValue="false"
        android:layout="@layout/activity_settings"/>

    <CheckBoxPreference
        android:key="setting_automatic_usb_communication"
        android:title="@string/automatic_usb_title"
        android:summary="@string/automatic_usb_summary"
        android:defaultValue="false"
        android:layout="@layout/activity_settings"/>

    <CheckBoxPreference
        android:key="setting_only_enable_relevant_buttons"
        android:title="@string/only_enable_relevant_buttons_title"
        android:summary="@string/only_enable_relevant_buttons_summary"
        android:defaultValue="true"
        android:layout="@layout/activity_settings"/>

    <CheckBoxPreference
        android:key="setting_hide_unchangeable_parameters"
        android:title="@string/hide_unchangeable_parameters_title"
        android:summary="@string/hide_unchangeable_parameters_summary"
        android:defaultValue="true"
        android:layout="@layout/activity_settings"/>

</PreferenceScreen>