<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".activities.SetupMenuActivity">

    <Button
        android:id="@+id/view_setup_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_setup_list"
        android:textSize="@dimen/font_size_normal"
        android:padding="@dimen/padding_button"
        android:visibility="visible"/>

    <Button
        android:id="@+id/new_setup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_setup"
        android:textSize="@dimen/font_size_normal"
        android:padding="@dimen/padding_button"
        android:visibility="visible"/>

    <Button
        android:id="@+id/new_setup_from_template_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_setup_template"
        android:textSize="@dimen/font_size_normal"
        android:padding="@dimen/padding_button"
        android:visibility="visible"/>

</LinearLayout>